# Vehitrack

./: README.md  pyproject.toml  vehitrack.sqlite
configs/: config.example.toml
deploy/: vehitrack.service
src/vehitrack/api/: app.py
src/vehitrack/core/: filters.py  geo.py  models.py
src/vehitrack/gps/: gpsd.py
src/vehitrack/store/: exporters.py  sqlite_store.py  tiles.py
src/vehitrack/ui/: app.js  index.html  styles.css  test_map.html
